Correction in align in the footer

--- a/stylesheets/landing.css
+++ b/stylesheets/landing.css
@@ -2770,7 +2770,7 @@ a {
     margin: 0 auto !important;
     margin-bottom: 20px!important;
   }
-  .wrapper{
+  footer .wrapper{
     padding: 0;
   }
 }
